--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
     <groupId>com.my</groupId>
     <artifactId>qwe</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <repositories>
+        <repository>
+            <id>bytedeco</id>
+            <url>https://maven.aliyun.com/repository/central</url>
+        </repository>
+    </repositories>
+
 
     <properties>
         <maven.compiler.source>23</maven.compiler.source>
@@ -16,23 +23,23 @@
 
     <dependencies>
         <!-- JSON 解析 -->
+
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20231013</version>
         </dependency>
 
-        <!-- SLF4J + Logback（或改用Log4j） -->
         <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>1.4.11</version>
+            <groupId>org.bytedeco</groupId>
+            <artifactId>opencv-platform</artifactId>
+            <version>4.7.0-1.5.9</version>
         </dependency>
 
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.15.2</version>
+            <version>2.15.3</version>
         </dependency>
 
     </dependencies>
