--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,7 @@
     <groupId>com.my</groupId>
     <artifactId>qwe</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <repositories>
-        <repository>
-            <id>bytedeco</id>
-            <url>https://maven.aliyun.com/repository/central</url>
-        </repository>
-    </repositories>
+
 
 
     <properties>
@@ -36,11 +31,22 @@
             <version>4.7.0-1.5.9</version>
         </dependency>
 
+
+
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.15.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.ini4j</groupId>
+            <artifactId>ini4j</artifactId>
+            <version>0.5.4</version>
+        </dependency>
+
+
+
 
     </dependencies>
 
